installation: added bootstrap and react-hook-form

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "unite-electron-part",
   "productName": "unite-electron-part",
   "version": "1.0.0",
-  
   "description": "My Electron application description",
   "main": "src/main.js",
   "scripts": {
@@ -10,9 +9,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "electron": "electron .",
-
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -43,12 +40,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
